examples/valid/39_executable_entry.lane
module ExecutableEntry

import Stdlib.Io.*

pub fn main() -> Unit ! Io {
  Write::println!("hello from Lane")
}
