examples/invalid/04_empty_block_no_implicit_unit.lane
module Examples.Invalid04
// invalid: empty blocks do not implicitly produce Unit
pub fn empty() -> Unit {
}
